--- a/src/main/resources/templates/task/update.html
+++ b/src/main/resources/templates/task/update.html
@@ -26,7 +26,7 @@
 
                             <section class="panel panel-transparent">
                                 <header class="panel-heading">
-                                    <h2 class="panel-title">Task Update</h2>
+                                    <h2 class="panel-title">Task Assign</h2>
                                 </header>
 
                                 <div class="panel-body">
@@ -85,7 +85,7 @@
                                         <div class="row">
                                             <div class="col">
                                                 <div class="float-right">
-                                                    <button class="btn btn-success rounded-0" type="submit">Update</button>
+                                                    <button class="btn btn-success rounded-0" type="submit">Save</button>
                                                 </div>
                                             </div>
                                         </div>
