--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -26,22 +26,18 @@
 
                             <section class="panel panel-transparent">
                                 <header class="panel-heading">
-                                    <h2 class="panel-title">User Update</h2>
+                                    <h2 class="panel-title">User Create</h2>
                                 </header>
 
                                 <div class="panel-body">
 
                                     <!-- ------------------------FORM START----------------------------- -->
-                                    <form class="needs-validation" novalidate
-                                          th:href="@{/user/update/{id}(id=${user.userName})}" method="post"
-                                          th:object="${user}">
+                                    <form class="needs-validation" novalidate th:action="@{/user/update/{id}(id=${user.userName})}" method="post" th:object="${user}" >
                                         <div class="row">
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="firstname" class="col-form-label">First Name</label>
-                                                    <input id="firstname" type="text" placeholder="first name"
-                                                           th:field="*{firstName}"
-                                                           class="form-control" required>
+                                                    <input id="firstname" type="text" placeholder="first name" th:field="*{firstName}" class="form-control" required>
                                                     <div class="invalid-feedback">
                                                         Please enter first name.
                                                     </div>
@@ -51,9 +47,7 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="lastname" class="col-form-label">Last Name</label>
-                                                    <input id="lastname" type="text" placeholder="last name"
-                                                           th:field="*{lastName}"
-                                                           class="form-control" required>
+                                                    <input id="lastname" type="text" placeholder="last name" th:field="*{lastName}" class="form-control" required>
                                                     <div class="invalid-feedback">
                                                         Please enter last name.
                                                     </div>
@@ -64,11 +58,8 @@
                                         <div class="row">
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
-                                                    <label for="emailaddress" class="col-form-label">Email
-                                                        Address</label>
-                                                    <input id="emailaddress" type="text" placeholder="email address"
-                                                           th:field="*{userName}"
-                                                           class="form-control" required>
+                                                    <label for="emailaddress" class="col-form-label">Email Address</label>
+                                                    <input id="emailaddress" type="text" placeholder="email address" th:field="*{userName}" class="form-control" required>
                                                     <div class="invalid-feedback">
                                                         Please enter email.
                                                     </div>
@@ -78,9 +69,7 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="phonenumber" class="col-form-label">Phone Number</label>
-                                                    <input id="phonenumber" type="tel" placeholder="phone number"
-                                                           th:field="*{phone}"
-                                                           class="form-control" pattern="^\d{10}" required>
+                                                    <input id="phonenumber" type="tel" placeholder="phone number" th:field="*{phone}" class="form-control"  pattern="^\d{10}$" required>
                                                     <div class="invalid-feedback">
                                                         Please enter 10 digit mobile number.
                                                     </div>
@@ -92,14 +81,10 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="password" class="col-form-label">Password</label>
-                                                    <input id="password" type="password" placeholder="password"
-                                                           th:field="*{passWord}"
-                                                           class="form-control"
-                                                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+                                                    <input id="password" type="password" placeholder="password" th:field="*{passWord}" class="form-control"
+                                                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{4,}" required>
                                                     <div class="invalid-feedback">
-                                                        Must contain at least one number and one uppercase and lowercase
-                                                        letter, and at least 8 or more
-                                                        characters
+                                                        Must contain at least one number and one uppercase and lowercase letter, and at least 4 or more characters"
                                                     </div>
                                                 </div>
                                             </div>
@@ -107,14 +92,10 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="repassword" class="col-form-label">Password</label>
-                                                    <input id="repassword" type="password"
-                                                           placeholder="confirm your password" class="form-control"
-                                                           th:field="*{confirmPassword}"
-                                                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+                                                    <input id="repassword" type="password" placeholder="confirm your password" th:field="*{confirmPassword}" class="form-control"
+                                                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{4,}" required>
                                                     <div class="invalid-feedback">
-                                                        Must contain at least one number and one uppercase and lowercase
-                                                        letter, and at least 8 or more
-                                                        characters
+                                                        Must contain at least one number and one uppercase and lowercase letter, and at least 4 or more characters"
                                                     </div>
                                                 </div>
                                             </div>
@@ -125,16 +106,10 @@
                                                 <div class="form-group">
                                                     <label>Gender</label><br>
                                                     <label class="custom-control custom-radio custom-control-inline">
-                                                        <input type="radio" name="radio-inline" checked=""
-                                                               th:field="*{gender}" th:value="MALE"
-                                                               class="custom-control-input"><span
-                                                            class="custom-control-label">Male</span>
+                                                        <input type="radio" name="radio-inline" checked="" th:field="*{gender}" th:value="MALE" class="custom-control-input"><span class="custom-control-label">Male</span>
                                                     </label>
                                                     <label class="custom-control custom-radio custom-control-inline">
-                                                        <input type="radio" name="radio-inline" th:field="*{gender}"
-                                                               th:value="FEMALE"
-                                                               class="custom-control-input"><span
-                                                            class="custom-control-label">Female</span>
+                                                        <input type="radio" name="radio-inline" th:field="*{gender}" th:value="FEMALE" class="custom-control-input"><span class="custom-control-label">Female</span>
                                                     </label>
 
                                                 </div>
@@ -143,12 +118,12 @@
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label>Choose a Role</label>
-                                                    <!--                                                th:field won't work with th:selected and th:filed must be replace with id or role-->
-                                                    <!--                                                <select th:field="*{role}" class="custom-select" required="required">-->
-                                                    <select th:field="*{role}" name="role" class="custom-select"
-                                                            required="required">
-                                                        <!--                                                        <option th:value=" ''" th:text="Select"></option>-->
-                                                        <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.description}"></option>
+                                                    <select name="role" class="custom-select" required="required">
+                                                        <option th:each="r : ${roles}"
+                                                                th:value="${r.id}"
+                                                                th:text="${r.description}"
+                                                                th:selected="(${r.id} == *{role.id})">
+                                                        </option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -157,10 +132,11 @@
                                         <div class="row">
                                             <div class="col-sm-6 col-md-6 col-lg-12">
                                                 <div class="float-right">
-                                                    <button type="submit" class="btn btn-success">Update</button>
+                                                    <button type="submit" class="btn btn-success">Save</button>
                                                 </div>
                                             </div>
                                         </div>
+
                                     </form>
                                     <!-- ------------------------FORM END----------------------------- -->
 
@@ -173,6 +149,7 @@
                     </div>
 
                 </div>
+
 
 
                 <!-- ------------------------TABLE START----------------------------- -->
@@ -197,28 +174,22 @@
                                                 <th scope="col">Action</th>
                                             </tr>
                                             </thead>
+
                                             <tbody>
+
                                             <tr th:each="user : ${users}">
-                                                <td th:text="${user.firstName+user.lastName}"></td>
+                                                <td th:text="${user.firstName + ' ' + user.lastName}"></td>
                                                 <td th:text="${user.userName}"></td>
-                                                <td th:text="${user.gender.value}"></td>
+                                                <td th:text="${user.gender}"></td>
                                                 <td th:text="${user.phone}"></td>
                                                 <td th:text="${user.role.description}"></td>
                                                 <td class="actions">
-                                                    <a th:href="@{/user/update/{id}(id=${user.userName})}">
-                                                        <button type="button" class="btn btn-warning btn-sm">Update
-                                                        </button>
-                                                    </a>
-                                                    <a th:href="@{/user/delete/{id}(id=${user.userName})}"
-                                                       class="delete-row">
-                                                        <button type="button" class="btn btn-secondary btn-sm">Delete
-                                                        </button>
-                                                    </a>
+                                                    <a th:href="@{/user/update/{id}(id=${user.userName})}"><button type="button" class="btn btn-warning btn-sm">Update</button></a>
+                                                    <a th:href="@{/user/delete/{id}(id=${user.userName})}" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>
                                                 </td>
                                             </tr>
 
                                             </tbody>
-
                                         </table>
                                     </div>
                                 </div>
